feat: add booking waitlist
